PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ConstantWithoutCallExpression.par
ConstantWithoutCallExpression {
seq three() : Int {
    return 3
}
seq main() : Void {
    const test = [34, three()]
}
}